syntax = "proto3";

package qsc;

import "google/protobuf/any.proto";

message Message {
    int64 node = 1;
    google.protobuf.Any proposal = 2;
}

message MessageSet {
    map<int64, Message> messages = 1;
    uint64 timeStep = 2;
    int64 node = 3;
}

message View {
    MessageSet received = 1;
    MessageSet broadcasted = 2;
}

message RequestMessageSet {
    uint64 timeStep = 1;
    repeated int64 nodes = 2;
}
